--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav img {
     font-size: 15px;
     padding: 20px;
     align-items: center;
-    background-color: #008EFF;
+    background-color: #8C79EF;
     color: beige;
     justify-content: center;
 }
@@ -101,7 +101,7 @@ button{
   border: none;
     padding: 20px;
     font-family: 'Figtree', sans-serif ;
-    background-color: #FFC600 ;
+    background-color: #FFDE59 ;
     border-bottom: 2px solid #FFC600;
     cursor: pointer;
     font-weight: bold;
@@ -110,10 +110,53 @@ button{
     
 }
 button:hover{
-    background-color: #FA0272;
+    background-color: #FFC2EB;
     color: #000000;
     transform: translateY(-5px);
-    box-shadow: 0 2px 4px #FA0272;
-    border-bottom: 2px solid #FA0272;
-    color:beige;
+    box-shadow: 0 2px 4px #FF83D1;
+    border-bottom: 2px solid #FF83D1;
+    
+}
+
+.finaliza{
+    display: flex;
+    padding: 60px;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+}
+
+.imagen2{
+    width: 30%;
+    display: flex;
+   
+}
+.imagen2 img{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.finaliza h2 {
+  font-family: 'Figtree', sans-serif ;
+  font-size: xxx-large;
+  color: #2B2B2B;
+  
+}
+.finaliza p {
+    font-family: 'Figtree', sans-serif ;
+    font-size: xxx-large;
+    color: #2B2B2B;
+    font-weight:bold;
+  }
+
+.inscripciones{
+    display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+    padding: 108px;
+    gap: 20px;
 }
