--- a/style.css
+++ b/style.css
@@ -52,17 +52,25 @@ nav img {
 
 .nav li {
     margin: 0px 5px;
+    color:#2B2B2B;
 }
 
 .nav li:hover{
-    color:#008EFF;
+    color:#8C79EF;
     font-weight: 600;
+}
+
+.enlaces{
+    text-decoration: none;
+    color:#2B2B2B;
+}
+.enlaces:hover{
+    color:#8C79EF;
 }
 .imagen{
     width: 100%;
     height: 500px;
-    background-color: #893c3c;
-  
+    
 }
 
 .imagen img{
@@ -88,6 +96,12 @@ nav img {
 
 .nivel h1{
     font-size: 40px;
+    transition: all 0.4s;
+}
+.nivel h1:hover{
+    transform: translateY(-5px);
+    
+    
 }
 .parrafo{
     width: 400px;
