--- a/style.css
+++ b/style.css
@@ -174,3 +174,89 @@ align-items: center;
     padding: 108px;
     gap: 20px;
 }
+
+#mostrarTarjeta{
+    margin-bottom: 30px;
+    margin-top: 30px;
+    background-color: #ea4c89;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-weight: 500;
+    font-size: 14pt;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#mostrarTarjeta:hover{
+    opacity: 0.75;
+
+}
+
+#tarjeta{
+    display: none;
+}
+#tarjeta{
+    
+    flex-direction: column;
+    font-size: 15px;
+    align-items: center;
+    justify-content: flex-start;
+    border-radius: 5%;
+    width: 300px;
+    height: 300px;
+    padding: 20px;
+    align-content: center;
+    background-color: rgb(255, 252, 252);
+    position: relative;
+    font-family: 'Figtree', sans-serif ;
+    background-color: rgb(197, 103, 226);
+    color:#101010;
+}
+
+.oculto h1{
+    font-family: 'Figtree', sans-serif ;
+    padding: 20px;
+  margin-left: 20px;
+ 
+}
+
+
+.oculto li{
+    font-family: 'Figtree', sans-serif ;
+    list-style-type: none;
+    margin-left: 15px;
+  
+}
+
+.matricula{
+   
+  border-radius: 5px;
+  border: none;
+    padding: 10px;
+    font-family: 'Figtree', sans-serif ;
+    background-color: #FFDE59 ;
+    border-bottom: 2px solid #FFC600;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 100%;
+    transition: all 0.4s;
+    margin-top: 10px;
+    margin-left: 53px;
+}
+.matricula:hover{
+    background-color:#76E2FF;
+    color: #000000;
+    transform: translateY(-5px);
+    box-shadow: 0 2px 4px #FF83D1;
+    border-bottom: 2px solid #FF83D1;
+}
+.enlaceMatri{
+    text-decoration: none;
+    color:#2B2B2B;
+}
+
+
+
+
