--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400&family=Magra&display=swap');
  html{
     scroll-behavior: smooth;
-} 
+}
 * {
     margin: 0;
     padding: 0;
@@ -16,28 +16,34 @@ header{
     padding: 5px;
     font-family: 'Figtree', sans-serif;
    
-    
+
+
 }
 
 .logo {
-    float: left; 
-    margin-right: 10px; 
+    float: left;
+    margin-right: 10px;
 }
 .bar {
-    width: 100%;   
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    align-items: center; 
-    padding: 10px 25px;
+    align-items: center;
+     padding: 10px 25px; 
+     position: fixed;
+     z-index: 1000;
+     background-color: white;
+     top: 0;
+    
 }
 
 .nav .nav-content {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: space-between;
     width: 100%;
     gap:410px;
-    
+
 }
 
 nav img {
@@ -45,8 +51,14 @@ nav img {
     height: auto;
     margin-right: 10px;
     display: flex;
+    filter: brightness(1);
 }
 
+nav img:hover{
+    width: 60px;
+    height: auto;
+    filter: brightness(1.2);
+}
 .nav ul {
     list-style: none;
     display: flex;
@@ -82,7 +94,7 @@ nav img {
     overflow: hidden;
 }
 
-  
+
 .overlay {
     font-family: 'Figtree', sans-serif;
     font-weight: bold;
@@ -102,9 +114,9 @@ nav img {
     justify-content: center;
     animation: flash 2s 1; /* Aplica la animación flash */
   }
-  
 
-  
+
+
 .overlay::before {
     content: '';
     position: absolute;
@@ -127,9 +139,9 @@ nav img {
     font-family: 'Figtree', sans-serif;
     font-weight: bold;
     font-size: 60px;
-  
+
   }
-  
+
   @keyframes flash {
     0% {
       opacity: 0;
@@ -174,7 +186,7 @@ nav img {
 }
 .nivel h1:hover{
     transform: translateY(-5px);
-       
+
 }
 
 .nivel h1::selection{
@@ -199,7 +211,7 @@ button{
     font-weight: bold;
     font-size: 100%;
     transition: all 0.4s;
-    
+
 }
 button:hover{
     background-color: #FFC2EB;
@@ -207,7 +219,7 @@ button:hover{
     transform: translateY(-5px);
     box-shadow: 0 2px 4px #FF83D1;
     border-bottom: 2px solid #FF83D1;
-    
+
 }
 
 .finaliza{
@@ -221,7 +233,7 @@ button:hover{
 .imagen2{
     width: 30%;
     display: flex;
-   
+
 }
 .imagen2 img{
     display: flex;
@@ -235,7 +247,7 @@ button:hover{
   font-family: 'Figtree', sans-serif ;
   font-size: xxx-large;
   color: #2B2B2B;
-  
+
 }
 .finaliza p {
     font-family: 'Figtree', sans-serif ;
@@ -244,6 +256,34 @@ button:hover{
     font-weight:bold;
   }
 
+    .contenedorflecha {
+        display: flex;
+        padding: 31px;
+        flex-direction: row-reverse;
+}
+
+.material-symbols-outlined {
+    color:#8C79EF;
+
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 500,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+span a {
+
+    text-decoration: none;
+    color:#8C79EF;
+    font-size: 50px;
+    filter: brightness(1);
+}
+
+span a:hover{
+    filter: brightness(0.5);
+    font-size: 55px;
+}
 .inscripciones{
     display: flex;
 flex-direction: column;
@@ -276,7 +316,7 @@ align-items: center;
     display: none;
 }
 #tarjeta{
-    
+
     flex-direction: column;
     font-size: 15px;
     align-items: center;
@@ -298,7 +338,7 @@ align-items: center;
     padding: 20px;
   margin-left: 20px;
   color: white;
- 
+
 }
 
 
@@ -306,11 +346,11 @@ align-items: center;
     font-family: 'Figtree', sans-serif ;
     list-style-type: none;
     margin-left: 15px;
-  
+
 }
 
 .matricula{
-   
+
   border-radius: 5px;
   border: none;
     padding: 10px;
@@ -356,7 +396,7 @@ align-items: center;
     flex-wrap: nowrap;
     flex-direction: row;
     gap:31px;
-    
+
 }
 .tex2{
     font-size: 20px;
@@ -365,9 +405,9 @@ align-items: center;
     font-style: 45px;
 
 }
-.nosotros p 
+.nosotros p
 {   text-align: justify;
-   
+
     margin-top: 23px;
     margin-bottom: 34px;
     font-size: 20px;
@@ -385,42 +425,52 @@ color:#2e2a2c;
 }
 
 .footer{
-    /* display: flex;
-    align-content: stretch;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    gap:31px; */
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem;
+
     font-family: 'Figtree', sans-serif;
     background-color:#FFDE59;
     color:#2e2a2c;
 }
 
+.contenedorfooter{
 
-.redes{
     display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 623px;
+    padding: 37px;
+}
+.redes{
+
     align-items: center;
     font-family: 'Figtree', sans-serif;
-    margin-top: 8px;
-    
-    
+
+
+
   }
   .redes a{
-    margin-right: 10px;
+    text-decoration: none;
   }
 .redes img{
     width: 20px;
     height: 20px;
     filter: brightness(0.5);
   }
-  
-  
+
+
   .redes img:hover{
     filter:brightness(1);
   }
 
-  
+  .copyright {
+    display: flex;
+    font-size: 13px;
+    color:#2e2a2c;
+
+  }
+  .copyright a {
+  text-decoration: none;
+  color:#2B2B2B;
+}
