--- a/style.css
+++ b/style.css
@@ -476,3 +476,10 @@ color:#2e2a2c;
   text-decoration: none;
   color:#2B2B2B;
 }
+
+@media (max-width:480px) {
+
+    .imagen2 img {
+        display: none;
+    }
+}
