--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header{
 
 header {
  height: 50px;
+
 }
 
 .logo {
@@ -51,7 +52,22 @@ header {
     border: none;
     cursor: pointer;
     list-style-type: none;
+    
 
+}
+
+#menuToggle.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  
+  .logo.fixed {
+    position: fixed;
+    top: 10px; /* Ajusta la posición superior según tus necesidades */
+    left: 20px; /* Ajusta la posición izquierda según tus necesidades */
+    z-index: 999; /* Ajusta el valor de z-index según tus necesidades */
 }
 
 .material-symbols-outlined {
